QC-48 - Renamed some modules and sped up some mouse clicks and key sequences

--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -232,26 +232,26 @@
       <id>2e2a7bd5-8774-41d3-85f2-4d13e96e7f56</id>
       <BoundTo>15007a39-e207-416f-abb6-5c7c7288a520</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ClickInvalidate.cs">
-      <DependentUpon>ClickInvalidate.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Click_Invalidate.cs">
+      <DependentUpon>Click_Invalidate.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>be27b609-40f0-4449-a830-2bce87af662e</id>
       <BoundTo>b98d329d-65ef-4076-8998-a8be2ca9993e</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ClickInvalidate.UserCode.cs">
-      <DependentUpon>ClickInvalidate.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Click_Invalidate.UserCode.cs">
+      <DependentUpon>Click_Invalidate.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>dda74fb5-2198-48c2-8005-07888e2ebafc</id>
       <BoundTo>b98d329d-65ef-4076-8998-a8be2ca9993e</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ClickMakePrimary.cs">
-      <DependentUpon>ClickMakePrimary.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Click_MakePrimary.cs">
+      <DependentUpon>Click_MakePrimary.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>d2af758e-cd65-4486-bc23-90b9d452de2a</id>
       <BoundTo>dbd780dc-bd39-43ce-b8d0-1e440caaad34</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ClickMakePrimary.UserCode.cs">
-      <DependentUpon>ClickMakePrimary.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Click_MakePrimary.UserCode.cs">
+      <DependentUpon>Click_MakePrimary.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>8d7c915b-1c00-4536-9d61-94e0dee737ec</id>
       <BoundTo>dbd780dc-bd39-43ce-b8d0-1e440caaad34</BoundTo>
@@ -280,38 +280,26 @@
       <id>aa8a133e-a372-4a9f-a497-8f4171606ae9</id>
       <BoundTo>71d51325-bcef-40de-8c89-c58fb829cd61</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ClickRestoreButton.cs">
-      <DependentUpon>ClickRestoreButton.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Click_RestoreButton.cs">
+      <DependentUpon>Click_RestoreButton.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>b29d45ae-7d74-4909-92be-022872fa9428</id>
       <BoundTo>b9b21158-217a-4890-9b67-a876f9e573a3</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ClickRestoreButton.UserCode.cs">
-      <DependentUpon>ClickRestoreButton.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Click_RestoreButton.UserCode.cs">
+      <DependentUpon>Click_RestoreButton.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>cecbbb0c-f1ae-4026-ad79-1e6b884d673e</id>
       <BoundTo>b9b21158-217a-4890-9b67-a876f9e573a3</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\Close_Browser.cs">
-      <BoundTo>101b22b0-018d-4b9b-9b53-1824272cd355</BoundTo>
-      <DependentUpon>Close_Browser.rxrec</DependentUpon>
-      <RecorderCode>true</RecorderCode>
-      <id>7306c86b-6a3a-4771-9f9d-355356b0e64a</id>
-    </Compile>
-    <Compile Include="DCT_Page\Close_Browser.UserCode.cs">
-      <BoundTo>101b22b0-018d-4b9b-9b53-1824272cd355</BoundTo>
-      <DependentUpon>Close_Browser.rxrec</DependentUpon>
-      <UserCode>true</UserCode>
-      <id>9ec5c1dd-51f7-4401-9503-b5a353e4e37e</id>
-    </Compile>
-    <Compile Include="DCT_Page\ClrPrimary.cs">
-      <DependentUpon>ClrPrimary.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Clear_Primary.cs">
+      <DependentUpon>Clear_Primary.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>8201c104-6ec2-4d92-a873-9f00a8a54665</id>
       <BoundTo>03c0e955-159f-42d4-9916-f635d3c26c1c</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ClrPrimary.UserCode.cs">
-      <DependentUpon>ClrPrimary.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Clear_Primary.UserCode.cs">
+      <DependentUpon>Clear_Primary.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>aaee5fe6-052c-46e0-be0c-5debb374919d</id>
       <BoundTo>03c0e955-159f-42d4-9916-f635d3c26c1c</BoundTo>
@@ -340,14 +328,14 @@
       <id>558f2e5b-ac99-47d0-9d42-bdc85ad877b3</id>
       <BoundTo>2b7d0c69-f283-44ee-9d70-d9ab512e1982</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ConfirmInvalidated.cs">
-      <DependentUpon>ConfirmInvalidated.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Confirm_Invalidated.cs">
+      <DependentUpon>Confirm_Invalidated.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>af021501-27fd-40a3-990b-9c55c6be3ba9</id>
       <BoundTo>0225f142-0e79-4074-a338-76bd6f4590d1</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ConfirmInvalidated.UserCode.cs">
-      <DependentUpon>ConfirmInvalidated.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Confirm_Invalidated.UserCode.cs">
+      <DependentUpon>Confirm_Invalidated.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>f05bfde5-7e96-43be-b629-963066ed2cff</id>
       <BoundTo>0225f142-0e79-4074-a338-76bd6f4590d1</BoundTo>
@@ -460,14 +448,14 @@
       <id>5edacd4b-4460-4c8e-aa2a-673a1f66809c</id>
       <BoundTo>3f879aee-a619-4789-925f-1687484d4501</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ValidatePrimarySetYES.cs">
-      <DependentUpon>ValidatePrimarySetYES.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Validate_PrimarySetYES.cs">
+      <DependentUpon>Validate_PrimarySetYES.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>20269c6f-9ab7-48fa-88a9-e70044588bcf</id>
       <BoundTo>4a3c1e0b-ef34-4db7-bed5-0f3970a6ab5b</BoundTo>
     </Compile>
-    <Compile Include="DCT_Page\ValidatePrimarySetYES.UserCode.cs">
-      <DependentUpon>ValidatePrimarySetYES.rxrec</DependentUpon>
+    <Compile Include="DCT_Page\Validate_PrimarySetYES.UserCode.cs">
+      <DependentUpon>Validate_PrimarySetYES.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>fa38a6f7-0802-4536-86a2-cca347ba41a7</id>
       <BoundTo>4a3c1e0b-ef34-4db7-bed5-0f3970a6ab5b</BoundTo>
@@ -910,12 +898,12 @@
       <id>15007a39-e207-416f-abb6-5c7c7288a520</id>
       <recordtableid>24d3a193-0675-4b16-902e-65d46c5a6669</recordtableid>
     </None>
-    <None Include="DCT_Page\ClickInvalidate.rxrec">
+    <None Include="DCT_Page\Click_Invalidate.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>b98d329d-65ef-4076-8998-a8be2ca9993e</id>
       <recordtableid>60f61c6d-2be8-41b8-afd0-3ad94c33df75</recordtableid>
     </None>
-    <None Include="DCT_Page\ClickMakePrimary.rxrec">
+    <None Include="DCT_Page\Click_MakePrimary.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>dbd780dc-bd39-43ce-b8d0-1e440caaad34</id>
       <recordtableid>8ec2bc44-7af4-4d5c-8a0e-265b0c4a7b82</recordtableid>
@@ -930,17 +918,12 @@
       <id>71d51325-bcef-40de-8c89-c58fb829cd61</id>
       <recordtableid>8f670042-56e3-46fe-ac01-db72cef2387c</recordtableid>
     </None>
-    <None Include="DCT_Page\ClickRestoreButton.rxrec">
+    <None Include="DCT_Page\Click_RestoreButton.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>b9b21158-217a-4890-9b67-a876f9e573a3</id>
       <recordtableid>b51f2390-cb01-4ca0-ac2f-d009a496b014</recordtableid>
     </None>
-    <None Include="DCT_Page\Close_Browser.rxrec">
-      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
-      <id>101b22b0-018d-4b9b-9b53-1824272cd355</id>
-      <recordtableid>a08780b4-c315-4471-9b06-4aa5cb21672c</recordtableid>
-    </None>
-    <None Include="DCT_Page\ClrPrimary.rxrec">
+    <None Include="DCT_Page\Clear_Primary.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>03c0e955-159f-42d4-9916-f635d3c26c1c</id>
       <recordtableid>43d4b22b-c198-427b-a835-787c01b1dfc8</recordtableid>
@@ -955,7 +938,7 @@
       <recordtableid>2080a809-44ee-4d9a-b966-a717a2ec56ba</recordtableid>
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
     </None>
-    <None Include="DCT_Page\ConfirmInvalidated.rxrec">
+    <None Include="DCT_Page\Confirm_Invalidated.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>0225f142-0e79-4074-a338-76bd6f4590d1</id>
       <recordtableid>4711457f-830a-4dcc-b010-ddb7cff95882</recordtableid>
@@ -1005,7 +988,7 @@
       <recordtableid>d402610e-47e3-451e-84ef-01a160a71297</recordtableid>
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
     </None>
-    <None Include="DCT_Page\ValidatePrimarySetYES.rxrec">
+    <None Include="DCT_Page\Validate_PrimarySetYES.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>4a3c1e0b-ef34-4db7-bed5-0f3970a6ab5b</id>
       <recordtableid>acbe9a03-b8a8-4911-84b9-f167d001e7de</recordtableid>
