QC-59 - Added new CRF's to project and modified RCC test run to use new AutomationStudy2

--- a/eSourcePlatform/RedCapCloud/RedCapCloud/RedCapCloud.csproj
+++ b/eSourcePlatform/RedCapCloud/RedCapCloud/RedCapCloud.csproj
@@ -1507,6 +1507,10 @@
     <None Include="app.config">
       <id>4ef413af-dd9f-4d81-8fac-ed4d3c600dfe</id>
     </None>
+    <None Include="csv\RedCapConfig_New.csv">
+      <id>3962c88c-3f00-4e2d-9daf-daddb170f246</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="InstrumentsPage\Click_Instruments_Tab.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>2e52d8fe-525a-4499-a54e-8354ba122ef5</id>
