QC-58: Adding test case for smoke test to validate the processor behavior. Also we  changed the Test data file for the smoke test.

--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -154,6 +154,18 @@
       <UserCode>true</UserCode>
       <id>9f6b8ae8-d236-456d-b84b-ed0a6c39c0c3</id>
     </Compile>
+    <Compile Include="DB_AssessmentValidation.cs">
+      <BoundTo>d1123a8a-78b7-412a-8997-cf90055a462c</BoundTo>
+      <DependentUpon>DB_AssessmentValidation.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>b65c9d97-4813-46dc-9598-5cf6c07edd64</id>
+    </Compile>
+    <Compile Include="DB_AssessmentValidation.UserCode.cs">
+      <BoundTo>d1123a8a-78b7-412a-8997-cf90055a462c</BoundTo>
+      <DependentUpon>DB_AssessmentValidation.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>0077bb98-dfb1-471a-955a-5712916e9a55</id>
+    </Compile>
     <Compile Include="DCDBVersion.cs">
       <BoundTo>657edab0-3b6f-4c07-a2ea-2583180e20ff</BoundTo>
       <DependentUpon>DCDBVersion.rxrec</DependentUpon>
@@ -234,6 +246,11 @@
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
       <id>18a81de2-f9cb-45d0-a3ef-481ace8d9c8c</id>
       <recordtableid>5440ad95-2787-406e-bfd8-a4a996120cd3</recordtableid>
+    </None>
+    <None Include="DB_AssessmentValidation.rxrec">
+      <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
+      <id>d1123a8a-78b7-412a-8997-cf90055a462c</id>
+      <recordtableid>74edc47d-2b4b-418c-8ffc-996ba7474b59</recordtableid>
     </None>
     <None Include="DCDBVersion.rxrec">
       <BoundTo>1ff89b80-cba6-4f21-a417-c668d100f247</BoundTo>
