QC-53 - Converted some manual Reporting Regression tests to automated tests

--- a/eSourcePlatform/ReportingLayer/ReportingLayer.csproj
+++ b/eSourcePlatform/ReportingLayer/ReportingLayer.csproj
@@ -178,6 +178,102 @@
     <Compile Include="AssemblyInfo.cs">
       <id>0e137d66-06a7-4e68-8d90-fb53b8c1a1ab</id>
     </Compile>
+    <Compile Include="Database\Validate_AssessmentOutcomeCard_Entry.cs">
+      <BoundTo>c6341acb-2116-4a3a-b07e-e388b0d47a17</BoundTo>
+      <DependentUpon>Validate_AssessmentOutcomeCard_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>78207075-c29f-49a5-b90a-6b75b2ced5af</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentOutcomeCard_Entry.UserCode.cs">
+      <BoundTo>c6341acb-2116-4a3a-b07e-e388b0d47a17</BoundTo>
+      <DependentUpon>Validate_AssessmentOutcomeCard_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>5d5ac9f3-2c12-4ad4-a7f2-59e19c432fde</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentOutcomeCPAL_Entry.cs">
+      <BoundTo>7f1c77c8-df83-4c55-9ca1-efd384db7da4</BoundTo>
+      <DependentUpon>Validate_AssessmentOutcomeCPAL_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>6ddabbc5-6adc-47c5-9632-4bd8c2f3ef66</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentOutcomeCPAL_Entry.UserCode.cs">
+      <BoundTo>7f1c77c8-df83-4c55-9ca1-efd384db7da4</BoundTo>
+      <DependentUpon>Validate_AssessmentOutcomeCPAL_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>493ceb86-55d7-49ae-9fa3-154065808b89</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestResp_Entry.cs">
+      <BoundTo>d1b03a58-c9f7-4aea-8bf2-f1e088fc1def</BoundTo>
+      <DependentUpon>Validate_AssessmentTestResp_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>a3950c25-bcb1-4c06-b170-cdfcbc64140b</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestResp_Entry.UserCode.cs">
+      <BoundTo>d1b03a58-c9f7-4aea-8bf2-f1e088fc1def</BoundTo>
+      <DependentUpon>Validate_AssessmentTestResp_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>426cbc95-10a3-4451-a7fd-616ba6f1e2a1</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTest_Entry.cs">
+      <BoundTo>e771b68e-3b6e-4bf1-b061-baccdcc65445</BoundTo>
+      <DependentUpon>Validate_AssessmentTest_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>ede51b87-131e-4f0e-a106-5b6919255073</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTest_Entry.UserCode.cs">
+      <BoundTo>e771b68e-3b6e-4bf1-b061-baccdcc65445</BoundTo>
+      <DependentUpon>Validate_AssessmentTest_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>a0e2ee2c-ad3e-4ca0-b290-ef08f42f050e</id>
+    </Compile>
+    <Compile Include="Database\Validate_Assessment_Entry.cs">
+      <BoundTo>9067b4a7-ccb0-4df6-9592-d87b142e1922</BoundTo>
+      <DependentUpon>Validate_Assessment_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>3d8dab3d-9f4b-44b9-8efd-5caf24609988</id>
+    </Compile>
+    <Compile Include="Database\Validate_Assessment_Entry.UserCode.cs">
+      <BoundTo>9067b4a7-ccb0-4df6-9592-d87b142e1922</BoundTo>
+      <DependentUpon>Validate_Assessment_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>04c4550f-da44-4c43-bb80-1869ea4bc8d8</id>
+    </Compile>
+    <Compile Include="Database\Validate_Site_Entry.cs">
+      <BoundTo>911b709c-f327-4367-aeae-2a198b478d9c</BoundTo>
+      <DependentUpon>Validate_Site_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f5c55f85-a887-4962-b396-212fe7794aba</id>
+    </Compile>
+    <Compile Include="Database\Validate_Site_Entry.UserCode.cs">
+      <BoundTo>911b709c-f327-4367-aeae-2a198b478d9c</BoundTo>
+      <DependentUpon>Validate_Site_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>2da892a0-f4f2-4bac-8938-ba415b300248</id>
+    </Compile>
+    <Compile Include="Database\Validate_Study_Entry.cs">
+      <BoundTo>89cdb8fa-cf52-4e47-81b0-c62ef7c4e130</BoundTo>
+      <DependentUpon>Validate_Study_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>912127c4-abb7-4dba-be9d-591f766673c9</id>
+    </Compile>
+    <Compile Include="Database\Validate_Study_Entry.UserCode.cs">
+      <BoundTo>89cdb8fa-cf52-4e47-81b0-c62ef7c4e130</BoundTo>
+      <DependentUpon>Validate_Study_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>1c28b20c-3d54-4cc5-b3d6-60c84fa2696f</id>
+    </Compile>
+    <Compile Include="Database\Validate_Subject_Entry.cs">
+      <BoundTo>d9107847-6da6-4fc6-bb6a-4b6c8521b33b</BoundTo>
+      <DependentUpon>Validate_Subject_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>7599568f-617a-419a-90f9-7dc040d37af1</id>
+    </Compile>
+    <Compile Include="Database\Validate_Subject_Entry.UserCode.cs">
+      <BoundTo>d9107847-6da6-4fc6-bb6a-4b6c8521b33b</BoundTo>
+      <DependentUpon>Validate_Subject_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>8ada7a04-2226-4352-81db-41d318a4c533</id>
+    </Compile>
     <Compile Include="PowerBI\Close_PowerBI.cs">
       <DependentUpon>Close_PowerBI.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -260,6 +356,46 @@
     <None Include="app.config">
       <id>329cf68b-b981-48cc-b464-e0c9bddac353</id>
     </None>
+    <None Include="Database\Validate_AssessmentOutcomeCard_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>c6341acb-2116-4a3a-b07e-e388b0d47a17</id>
+      <recordtableid>40776330-9698-4e7b-8b40-9f4c8e1580bd</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentOutcomeCPAL_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>7f1c77c8-df83-4c55-9ca1-efd384db7da4</id>
+      <recordtableid>3bf39a30-7df4-40fe-89cc-685a277a8651</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentTestResp_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>d1b03a58-c9f7-4aea-8bf2-f1e088fc1def</id>
+      <recordtableid>c57a8b24-4247-4289-8bef-58fab9af9e29</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentTest_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>e771b68e-3b6e-4bf1-b061-baccdcc65445</id>
+      <recordtableid>77c8efcb-14a0-412e-870a-f46ce9711064</recordtableid>
+    </None>
+    <None Include="Database\Validate_Assessment_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>9067b4a7-ccb0-4df6-9592-d87b142e1922</id>
+      <recordtableid>6ba7b7e9-f5c9-4c3b-a3f0-4ce9fbf2febb</recordtableid>
+    </None>
+    <None Include="Database\Validate_Site_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>911b709c-f327-4367-aeae-2a198b478d9c</id>
+      <recordtableid>87af8760-8e28-4032-946e-4d0264c94738</recordtableid>
+    </None>
+    <None Include="Database\Validate_Study_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>89cdb8fa-cf52-4e47-81b0-c62ef7c4e130</id>
+      <recordtableid>c7bbc66e-824c-48e1-ae05-f8f7db248cb7</recordtableid>
+    </None>
+    <None Include="Database\Validate_Subject_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>d9107847-6da6-4fc6-bb6a-4b6c8521b33b</id>
+      <recordtableid>b4f74c5e-8e1a-4e81-90e1-7066abb8fd92</recordtableid>
+    </None>
     <None Include="PowerBI\Close_PowerBI.rxrec">
       <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
       <id>02e7be70-d56d-48aa-a493-3aebd6c917f5</id>
@@ -306,12 +442,25 @@
     <Folder Include="AcademicExtract">
       <id>e4465c02-b08b-4ae4-b9b1-6f52e0bf3a02</id>
     </Folder>
+    <Folder Include="Database">
+      <id>059a2802-72d4-4d55-9989-5faeceea4959</id>
+    </Folder>
     <Folder Include="StandardExtract">
       <id>ad94e52f-403c-4566-832d-2c161fdb2904</id>
     </Folder>
     <Folder Include="PowerBI">
       <id>6fcc72df-71e4-415e-838f-fc3a5a372b45</id>
     </Folder>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CSP\CSP.csproj">
+      <Project>{A27B49D3-52B5-4D74-BD42-0AE2BD5C6144}</Project>
+      <Name>CSP</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RedCapCloud\RedCapCloud\RedCapCloud.csproj">
+      <Project>{739128AA-E017-4B60-8DDA-0EC961E1C746}</Project>
+      <Name>RedCapCloud</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(RanorexTargetsPath)" Condition="Exists('$(RanorexTargetsPath)')" />
