QC-53 - Converted additional manual Reporting Regression tests to automated tests

--- a/eSourcePlatform/ReportingLayer/ReportingLayer.csproj
+++ b/eSourcePlatform/ReportingLayer/ReportingLayer.csproj
@@ -202,6 +202,78 @@
       <UserCode>true</UserCode>
       <id>493ceb86-55d7-49ae-9fa3-154065808b89</id>
     </Compile>
+    <Compile Include="Database\Validate_AssessmentOutcomeFT_Entry.cs">
+      <BoundTo>7d0d1e01-1417-414f-b8bb-72bf53bd128d</BoundTo>
+      <DependentUpon>Validate_AssessmentOutcomeFT_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>d8ed87f9-3834-43e5-a500-e6a783f5eb8a</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentOutcomeFT_Entry.UserCode.cs">
+      <BoundTo>7d0d1e01-1417-414f-b8bb-72bf53bd128d</BoundTo>
+      <DependentUpon>Validate_AssessmentOutcomeFT_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>9158bacc-ffe7-47f6-9b90-729ebec5e71e</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeIDSST_Entry.cs">
+      <BoundTo>ebbd3ba0-6223-4aa5-8cdc-c1711d61add6</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeIDSST_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>50c3b70b-56c5-4632-a596-abadaf39e0f7</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeIDSST_Entry.UserCode.cs">
+      <BoundTo>ebbd3ba0-6223-4aa5-8cdc-c1711d61add6</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeIDSST_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>dd33675b-d430-48c5-86a0-aad7a77ee7cc</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeImage_Entry.cs">
+      <BoundTo>7a364fbc-83c7-4ed2-ac03-d0f905fb12e1</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeImage_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f77e8535-5bf9-44b1-9da7-ca742b1dad03</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeImage_Entry.UserCode.cs">
+      <BoundTo>7a364fbc-83c7-4ed2-ac03-d0f905fb12e1</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeImage_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>594dcfcf-c4f3-4cda-b567-210cab236414</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeList_Entry.cs">
+      <BoundTo>19b71be3-4592-496d-b1bc-77cd88ae82f8</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeList_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>66782d5a-14fb-4356-ba7f-c86650f2e554</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeList_Entry.UserCode.cs">
+      <BoundTo>19b71be3-4592-496d-b1bc-77cd88ae82f8</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeList_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>15c76f41-796d-45e0-8413-8e59355fe73b</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeMaze_Entry.cs">
+      <BoundTo>78d36426-cee2-40ca-aceb-00276f00dbdb</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeMaze_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>dcd6a76f-95c4-4762-88f5-4fb123a32eca</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeMaze_Entry.UserCode.cs">
+      <BoundTo>78d36426-cee2-40ca-aceb-00276f00dbdb</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeMaze_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>dabd0fbb-9862-4bcd-92bf-ee5ef2bf6991</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeSAT_Entry.cs">
+      <BoundTo>6ccee4f0-c1f5-4ad6-8e1f-8397d49cf868</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeSAT_Entry.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>268da3c5-854c-480b-8d10-36c7bdad40f0</id>
+    </Compile>
+    <Compile Include="Database\Validate_AssessmentTestOutcomeSAT_Entry.UserCode.cs">
+      <BoundTo>6ccee4f0-c1f5-4ad6-8e1f-8397d49cf868</BoundTo>
+      <DependentUpon>Validate_AssessmentTestOutcomeSAT_Entry.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>0ae96cf3-a9ae-40e2-95c3-554e83fd7dc7</id>
+    </Compile>
     <Compile Include="Database\Validate_AssessmentTestResp_Entry.cs">
       <BoundTo>d1b03a58-c9f7-4aea-8bf2-f1e088fc1def</BoundTo>
       <DependentUpon>Validate_AssessmentTestResp_Entry.rxrec</DependentUpon>
@@ -365,6 +437,36 @@
       <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
       <id>7f1c77c8-df83-4c55-9ca1-efd384db7da4</id>
       <recordtableid>3bf39a30-7df4-40fe-89cc-685a277a8651</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentOutcomeFT_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>7d0d1e01-1417-414f-b8bb-72bf53bd128d</id>
+      <recordtableid>da9f2a2f-35b0-4d03-b071-1584799912f5</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentTestOutcomeIDSST_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>ebbd3ba0-6223-4aa5-8cdc-c1711d61add6</id>
+      <recordtableid>91897ced-a08e-4623-acdd-10d9a4d7ddb4</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentTestOutcomeImage_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>7a364fbc-83c7-4ed2-ac03-d0f905fb12e1</id>
+      <recordtableid>9f5f3aa5-cc5d-4db6-98f3-9a238110b58c</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentTestOutcomeList_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>19b71be3-4592-496d-b1bc-77cd88ae82f8</id>
+      <recordtableid>9869e7bb-5fee-4d73-93f9-e7e7e240eb3c</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentTestOutcomeMaze_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>78d36426-cee2-40ca-aceb-00276f00dbdb</id>
+      <recordtableid>35780fd6-fc1a-4d3d-b321-0e9e471f1d66</recordtableid>
+    </None>
+    <None Include="Database\Validate_AssessmentTestOutcomeSAT_Entry.rxrec">
+      <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
+      <id>6ccee4f0-c1f5-4ad6-8e1f-8397d49cf868</id>
+      <recordtableid>4246b633-1d3d-47cf-9ae7-4fb2f592534f</recordtableid>
     </None>
     <None Include="Database\Validate_AssessmentTestResp_Entry.rxrec">
       <BoundTo>74e80a08-cf76-4909-887f-42d132066da8</BoundTo>
